# tcp_server_calculator

./: CMakeLists.txt  README.md
include/: tcpClient.h  tcpEntity.h  tcpServer.h
src/: main.cpp  tcpClient.cpp  tcpEntity.cpp  tcpServer.cpp
